[package]
name = "c2pa-preview"
version = "0.2.0"
description = "Preview C2PA content credentials on desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.17", features = ["unstable"] }
tauri-plugin-cli = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-os = "2.0.0-beta.4"
tauri-plugin-shell = "2.0.0-beta.4"
serde_json = "1.0.116"
c2pa = { version = "0.32.0", features = [
  "fetch_remote_manifests",
  "pdf",
  "image",
] }
infer = "0.15.0"

# TODO: cleanup features on objc2 crates
[target.'cfg(target_os = "macos")'.dependencies]
objc2-uniform-type-identifiers = { version = "0.2.0", features = [
  "UTCoreTypes",
  "UTType",
] }
objc2-app-kit = { version = "0.2.0", features = [
  "NSApplication",
  "NSResponder",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.2.0", features = [
  "NSExtensionRequestHandling",
  "NSExtensionContext",
  "NSExtensionItem",
  "NSArray",
  "NSItemProvider",
  "NSDictionary",
  "NSError",
  "NSObject",
  "NSString",
  "block2",
  "NSThread",
  "dispatch",
  "NSRunLoop",
] }
objc2 = "0.5.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "c2pa_preview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
