[package]
name = "c2pa-preview"
version = "0.2.0"
description = "Preview C2PA content credentials on desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-cli = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-shell = "2.2.0"
serde_json = "1.0.140"
c2pa = { version = "0.46.0", features = [
  "fetch_remote_manifests",
  "pdf",
  "image",
] }
infer = "0.16.0"

# TODO: cleanup features on objc2 crates
[target.'cfg(target_os = "macos")'.dependencies]
objc2-uniform-type-identifiers = { version = "0.3.0", features = [
  "UTCoreTypes",
  "UTType",
] }
objc2-app-kit = { version = "0.3.0", features = [
  "NSApplication",
  "NSResponder",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.3.0", features = [
  "NSExtensionRequestHandling",
  "NSExtensionContext",
  "NSExtensionItem",
  "NSArray",
  "NSItemProvider",
  "NSDictionary",
  "NSError",
  "NSObject",
  "NSString",
  "block2",
  "NSThread",
  "NSRunLoop",
] }
objc2 = "0.6.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "c2pa_preview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
